--- a/app/views/DirectDebitSummaryView.scala.html
+++ b/app/views/DirectDebitSummaryView.scala.html
@@ -27,10 +27,9 @@
     govukSummaryList: GovukSummaryList
 )
 
-@()(implicit request: Request[_], messages: Messages)
+@(call: Call)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = titleNoForm(messages("yourDirectDebitInstructions.title")), showBackLink = true) {
-
+@layout(pageTitle = titleNoForm(messages("yourDirectDebitInstructions.title")), backLink = Some(call.url)) {
 
     @header1("yourDirectDebitPaymentSummary.heading")
     @paragraph("yourDirectDebitPaymentSummary.p1")
