--- a/app/views/YourDirectDebitInstructionsView.scala.html
+++ b/app/views/YourDirectDebitInstructionsView.scala.html
@@ -67,7 +67,7 @@
                 actions = Some(Actions(
                     items = Seq(
                         ActionItem(
-                            href = "#",
+                            href = routes.DirectDebitSummaryController.onPageLoad().url,
                             content = messages("yourDirectDebitInstructions.dl.view.add"),
                             visuallyHiddenText = Some(messages(dd.directDebitReference))
                         )
