DTR-193: Adding test cases and routes to Journey recovery for now

--- a/app/views/amend/PaymentPlanAmountView.scala.html
+++ b/app/views/amend/PaymentPlanAmountView.scala.html
@@ -28,6 +28,7 @@
 
 @layout(pageTitle = title(form, messages("paymentAmount.title")), backLink = Some(call.url)) {
 
+ @formHelper(action = routes.PaymentPlanAmountController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
    @if(form.errors.nonEmpty) {
      @govukErrorSummary(ErrorSummaryViewModel(form))
@@ -47,5 +48,5 @@
   @govukButton(
   ButtonViewModel(messages("site.continue"))
   )
-
+}
 }
