DTR-193: Changing the hint text

--- a/app/views/AmendPaymentAmountView.scala.html
+++ b/app/views/AmendPaymentAmountView.scala.html
@@ -42,7 +42,7 @@
   )
   .withPrefix(PrefixOrSuffix(content = "£"))
   .withWidth(Fixed10)
-  .withHint(HintViewModel(HtmlContent(messages("paymentAmount.hint"))))
+  .withHint(HintViewModel(HtmlContent(messages("amendPaymentAmount.hint"))))
   )
 
   @govukButton(
