--- a/app/views/AmendPlanEndDateView.scala.html
+++ b/app/views/AmendPlanEndDateView.scala.html
@@ -35,15 +35,13 @@
         @govukDateInput(
             DateViewModel(
                 field  = form("value"),
-                legend = LegendViewModel(messages("planEndDate.heading")).asPageHeading()
+                legend = LegendViewModel(messages("amendPlanEndDate.heading")).asPageHeading()
                 ).withHint(
                 HintViewModel(
                     HtmlContent(
                     Seq(
-                        s"<p >${messages("planEndDate.p1")}</p>",
-                        s"<p >${messages("planEndDate.p2")}</p>",
-                        s"<p>${messages("planEndDate.p3")}</p>",
-                        s"<p class='govuk-!-margin-top-7'>${messages("planEndDate.hint")}</p>",
+                        s"<p >${messages("amendPlanEndDate.p1")}</p>",
+                        s"<p class='govuk-!-margin-top-7'>${messages("amendPlanEndDate.hint")}</p>",
                         ).mkString
                     )
                 )
