[DTR-146] - remove hit text and change text above radio buttons

--- a/app/views/DirectDebitSourceView.scala.html
+++ b/app/views/DirectDebitSourceView.scala.html
@@ -39,7 +39,9 @@
                 field  = form("value"),
                 legend = LegendViewModel(messages("directDebitSource.heading")).asPageHeading(),
                 items  = DirectDebitSource.options
-            ).withHint(Hint(content = Text(messages("directDebitSource.hint"))))
+            ).withHint(Hint(
+                content = Text(messages("directDebitSource.hint")),
+                classes = "govuk-hint-black"))
         )
 
         @govukButton(
