--- a/app/views/DirectDebitSummaryView.scala.html
+++ b/app/views/DirectDebitSummaryView.scala.html
@@ -29,9 +29,9 @@
     govukSummaryList: GovukSummaryList
 )
 
-@(directDebitReference: String, directDebitDetails: NddDDPaymentPlansResponse, call: Call)(implicit request: Request[_], messages: Messages)
+@(directDebitReference: String, directDebitDetails: NddDDPaymentPlansResponse)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = titleNoForm(messages("directDebitPaymentSummary.title")), backLink = Some(call.url)) {
+@layout(pageTitle = titleNoForm(messages("directDebitPaymentSummary.title")), backLink = Some(routes.YourDirectDebitInstructionsController.onPageLoad().url)) {
 
     @header1("directDebitPaymentSummary.heading")
     @paragraph("directDebitPaymentSummary.p1")
@@ -79,7 +79,7 @@
                 actions = Some(Actions(
                     items = Seq(
                         ActionItem(
-                            href = "#",
+                            href = routes.PaymentPlanDetailsController.onRedirect(pp.paymentReference).url,
                             content = messages("directDebitPaymentSummary.activePayment.summary.action"),
                             visuallyHiddenText = Some(messages(pp.paymentReference))
                         )
